--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>
-    Test deeplink
+    Test Adjust deeplink
   </h1>
   <p>
     <a href="https://vpbankuat.go.link/transfer?adj_t=14hp1sh4&adj_campaign=CAMPAIGN1&adj_adgroup=ADGROUP1&adj_creative=CREATIVE1">
