--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <script>
+	if (window.location.host.indexOf('nguyenda.com') > -1 && window.location.protocol != "https:"){
+		window.location.protocol = "https";
+	}
+  </script>
   <title>Browser</title>
 </head>
 
