--- a/index.html
+++ b/index.html
@@ -46,4 +46,10 @@
 			https://ghs8.adj.st
 		</a>
 	</p>
+
+	<p>
+		<a href="https://vpo.page.link/inick">
+			https://vpo.page.link/inick
+		</a>
+	</p>
 </body>
