--- a/404.html
+++ b/404.html
@@ -1,9 +1,15 @@
-<html>
-<head>
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  
+  
+  
 
-  <style>
-
-    
+  <title>CodePen - 404 page</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
+  
+<style>
 /*======================
     404 page
 =======================*/
@@ -37,11 +43,18 @@
     margin: 20px 0;
     display: inline-block;}
 	.contant_box_404{ margin-top:-50px;}
-  </style>
-</head>
-  <body>
+</style>
 
-    <section class="page_404">
+  <script>
+  window.console = window.console || function(t) {};
+</script>
+
+  
+  
+</head>
+
+<body translate="no">
+  <section class="page_404">
 	<div class="container">
 		<div class="row">	
 		<div class="col-sm-12 ">
@@ -59,13 +72,17 @@
 		
 		<p>the page you are looking for not avaible!</p>
 		
-		<a href="https://www.nguyenda.com" class="link_404">Go to Home</a>
+		<a href="" class="link_404">Go to Home</a>
 	</div>
 		</div>
 		</div>
 		</div>
 	</div>
 </section>
-  </body>
-</html>
+  
+  
+  
 
+
+
+</body></html>
