--- a/index.html
+++ b/index.html
@@ -9,47 +9,14 @@
 		window.location.protocol = "https";
 	}
   </script>
-  <title>Demo link</title>
+  <title>Demo QR gen by google</title>
 </head>
 
 <body>
   <h1>
-    Test Adjust deeplink
+    Test QR
   </h1>
   <p>
-    <a href="https://vpbankuat.go.link/transfer?adj_t=14hp1sh4&adj_campaign=CAMPAIGN1&adj_adgroup=ADGROUP1&adj_creative=CREATIVE1">
-		https://vpbankuat.go.link/transfer?adj_t=14hp1sh4&adj_campaign=CAMPAIGN1&adj_adgroup=ADGROUP1&adj_creative=CREATIVE1
-	</a>
-	
-	
-	</p>
-	<p>
-	<a href="https://vpbankuat.go.link/https://neo.vpbank.com.vn?adj_t=neo&adj_fallback=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_macos=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_ios=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_android=https%3A%2F%2Fneo.vpbank.com.vn&adj_idfa=https://neo.vpbank.com.vn">
-	https://vpbankuat.go.link/https://neo.vpbank.com.vn?adj_t=neo&adj_fallback=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_macos=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_ios=https%3A%2F%2Fneo.vpbank.com.vn&adj_redirect_android=https%3A%2F%2Fneo.vpbank.com.vn&adj_idfa=https://neo.vpbank.com.vn
-	</a>
-	</p>
-	
-	<p>
-		<a href="https://vpbankuat.go.link/topup?adj_t=14azxjge">
-		https://vpbankuat.go.link/topup?adj_t=14azxjge
-		</a>
-	</p>
-	
-	<p>
-		<a href="https://vpbank.go.link/mgm?adj_t=mgm">
-			https://vpbank.go.link/mgm?adj_t=mgm
-		</a>
-	</p>
-	
-	<p>
-		<a href="https://ghs8.adj.st">
-			https://ghs8.adj.st
-		</a>
-	</p>
-
-	<p>
-		<a href="https://vpo.page.link/inick">
-			https://vpo.page.link/inick
-		</a>
-	</p>
+	<img src="https://chart.googleapis.com/chart?cht=qr&chl=00020101021138540010A00000072701240006970432011009323886850208QRIBFTTA53037045802VN6304A349&chs=500x500&choe=UTF-8&chld=L|2" alt="qr code"></a>
+  </p>
 </body>
