--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<a href="#" id="downloader" onclick="javascript:download();" download="image.png">Tải ảnh QR!</a>
+<a href="#" id="downloader" onclick="javascript:download1();" download="image.png">Tải ảnh QR!</a>
 
 <a id="download" download="image.png"><button type="button" onClick="download()">Tải ảnh QR!</button></a>
 <p></p>
