--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 
 <body>
 
-<a href="#" id="downloader" onclick="javascript:download1();" download="image.png">Tải ảnh QR!</a>
+<a href="#" id="downloader" onclick="download1();" download="image.png">Tải ảnh QR!</a>
 
-<a id="download" download="image.png"><button type="button" onClick="download()">Tải ảnh QR!</button></a>
 <p></p>
 
 <canvas id="myCanvas" width="500" height="700" style="border:1px solid #d3d3d3;">
@@ -22,7 +21,7 @@ var qr = "00020101021138540010A00000072701240006970432011009323886850208QRIBFTTA
 const urlParams = new URLSearchParams(window.location.search);
 const myParamName = urlParams.get('name');
 const myParamAccNumber = urlParams.get('acc');
-const myParamQr = urlParams.get('acc');
+const myParamQr = urlParams.get('qr');
 
 if(myParamName)
 	name = myParamName;
@@ -33,10 +32,12 @@ if(myParamAccNumber)
 if(myParamQr)
 	qr = myParamQr;
 
+var linkqr = "https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=500x500&choe=UTF-8&chld=L|0";
+
 var c=document.getElementById("myCanvas");
 
 async function myfunction(url) {
-  return new Promise(r => { let i = new Image(); i.setAttribute('crossorigin', 'anonymous'); i.onload = (() => r(i)); i.src = url; });
+  return new Promise(r => { let i = new Image(); i.onload = (() => r(i)); i.src = url; });
 }
 
 function start(url) {
@@ -46,9 +47,8 @@ function start(url) {
 // Call start
 (async() => {
   console.log('before start');
-
-  
-  let img = await start("https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=500x500&choe=UTF-8&chld=L|0");
+  console.log('linkqr' + linkqr);
+  let img = await start(linkqr);
   
   
   let logo_vietqr = await start("./logos-vietqr.png");
