--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<a href="#" id="downloader" onclick="download();" download="image.png">Tải ảnh QR!</a>
+<a href="#" id="downloader" onclick="javascript:download();" download="image.png">Tải ảnh QR!</a>
 
 <p></p>
 
