--- a/index.html
+++ b/index.html
@@ -41,54 +41,51 @@ var linkqr = "https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=300x3
 
 var c=document.getElementById("myCanvas");
 
-async function myfunction(url) {
-  return new Promise(r => { let i = new Image();i.crossOrigin="anonymous"; i.onload = (() => r(i)); i.src = url; });
+async function crimg(url) {
+  return new Promise(r => { let i = new Image(); i.crossOrigin="anonymous"; i.onload = (() => r(i)); i.src = url; });
 }
 
-function start(url) {
-  return myfunction(url);
+function load(url) {
+  return crimg(url);
 }
 
-// Call start
+// Call load
 (async() => {
-  console.log('before start');
-  console.log('linkqr' + linkqr);
-  
-  let img_standee = await start("./" + standee);
-  
-  let img = await start(linkqr);
-  
-  
-  let logo_vietqr = await start("./logos-vietqr.png");
-  let logo_napas247 = await start("./napas247s.png");
+	console.log('before load');
+	console.log('linkqr' + linkqr);
+
+	let img_standee = await load("./" + standee);
+
+	let img = await load(linkqr);
+
+
+	let logo_vietqr = await load("./logos-vietqr.png");
+	let logo_napas247 = await load("./napas247s.png");
   
 	var ctx = c.getContext('2d');
 
-	ctx.fillStyle = "white";
-	ctx.fillRect(0, 0, c.width, c.height);
+	//ctx.fillStyle = "white";
+	//ctx.fillRect(0, 0, c.width, c.height);
 
-    ctx.drawImage(img_standee, 0, 0);
-	
+	ctx.drawImage(img_standee, 0, 0);
+
 	ctx.drawImage(img, 1050, 300);
-	
+
 	ctx.drawImage(logo_vietqr, 1050, 640);
-	
+
 	ctx.drawImage(logo_napas247, 1240, 640);
-	
+
 	ctx.fillStyle = "black";
-	
+
 	ctx.textAlign = "center";
 	ctx.font="25px Arial";
 	ctx.fillText(name, 1200, 770);
 
 	ctx.font="20px Arial";
 	ctx.fillText(accNumber, 1200, 810);
-	
 
-	// save img
-	//Canvas2Image.saveAsImage(c, 500, 500, 'png');
   
-  console.log('after start');
+    console.log('after load');
 })();
 
 
@@ -97,10 +94,12 @@ async function loadImage(url) {
 }
 
 function download(){
-    document.getElementById("downloader").download = name.replaceAll(" ","_"); + "_qr_standee.png";
+	console.log('download start');
+    //document.getElementById("downloader").download = name.replaceAll(" ","_"); + "_qr_standee.png";
+    document.getElementById("downloader").download = "_qr_standee.png";
     document.getElementById("downloader").href = document.getElementById("myCanvas").toDataURL("image/png").replace(/^data:image\/[^;]/, 'data:application/octet-stream');
+	console.log('download end');
 }
-
 
 </script>
 
