--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <body>
 
-<a href="#" id="downloader" onclick="javascript:download();" download="image.png">Tải ảnh QR!</a>
+<a href="#" id="downloader" onclick="download();" download="image.png">Tải ảnh QR!</a>
+<a id="download" download="image.png"><button type="button" onClick="download()">Tải ảnh QR!</button></a>
 <p></p>
 
 <canvas id="myCanvas" width="1489" height="1000" style="border:1px solid #d3d3d3;">
@@ -101,6 +102,20 @@ function download1(){
 function download(){
 	console.log('download start');
 	var downloader = document.getElementById("downloader");
+	downloader.download = name.replaceAll(" ","_"); + "_qr_standee.png";
+	
+	var image = document.getElementById("myCanvas").toDataURL("image/png")
+				.replace("image/png", "image/octet-stream");
+				
+	downloader.setAttribute("href", image);
+	
+	console.log('download end');
+}
+
+
+function download(){
+	console.log('download start');
+	var downloader = document.getElementById("download");
 	downloader.download = name.replaceAll(" ","_"); + "_qr_standee.png";
 	
 	var image = document.getElementById("myCanvas").toDataURL("image/png")
