--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<a style='display:none;' href="#" id="downloader" onclick="download();" download="image.png">Tải ảnh QR!</a>
+<a style='display:none;' href="#" id="downloader" onclick="download1();" download="image.png">Tải ảnh QR!</a>
 <a id="download" download="image.png"><button type="button" onClick="download()">Tải ảnh QR!</button></a>
 <p></p>
 
@@ -18,12 +18,14 @@ var name = "DAO ANH NGUYEN";
 var accNumber = "0912345678";
 var qr = "00020101021138540010A00000072701240006970432011009323886850208QRIBFTTA53037045802VN6304A349";
 var standee = "standee1.png";
+var dl = false;
 
 const urlParams = new URLSearchParams(window.location.search);
 const myParamName = urlParams.get('name');
 const myParamAccNumber = urlParams.get('acc');
 const myParamQr = urlParams.get('qr');
 const myParamStandee = urlParams.get('standee');
+const myParamStandeeDl = urlParams.get('dl');
 
 if(myParamName)
 	name = myParamName;
@@ -36,6 +38,9 @@ if(myParamQr)
 	
 if(myParamStandee)
 	standee = "standee" + myParamStandee + ".png";
+	
+if(myParamStandeeDl)
+	dl = myParamStandeeDl == "1";
 
 var linkqr = "https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=300x300&choe=UTF-8&chld=L|0";
 
@@ -85,6 +90,12 @@ function load(url) {
 	ctx.fillText(accNumber, 1200, 810);
 
   
+	if(dl)
+	{
+		download();
+		window.close();
+	}
+  
     console.log('after load');
 })();
 
@@ -93,13 +104,13 @@ async function loadImage(url) {
   return new Promise(r => { let i = new Image(); i.onload = (() => r(i)); i.src = url; });
 }
 
-function download1(){
+function download2(){
     document.getElementById("downloader").download = name.replaceAll(" ","_"); + "_qr_standee.png";
     document.getElementById("downloader").href = document.getElementById("myCanvas").toDataURL("image/png").replace(/^data:image\/[^;]/, 'data:application/octet-stream');
 	
 }
 
-function download(){
+function download1(){
 	console.log('download start');
 	var downloader = document.getElementById("downloader");
 	downloader.download = name.replaceAll(" ","_") + "_qr_standee.png";
