--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 <meta charset="utf-8" />
-
+<head>
+	<title>QR Standee Generate v3.11.15.14.09</title>
+</head>
 <body>
-23.11.15.13.58
-<a style='display:none;' href="#" id="downloader" onclick="download1();" download="image.png">Tải ảnh QR!</a>
+
+
 <a id="download" download="image.png"><button id="btndownload" type="button" onClick="download()">Tải ảnh QR!</button></a>
 <p></p>
 
@@ -14,11 +16,13 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 <script>
 
 //default
-var name = "DAO ANH NGUYEN";
-var accNumber = "0912345678";
-var qr = "00020101021138540010A00000072701240006970432011009323886850208QRIBFTTA53037045802VN6304A349";
-var standee = "standee1.png";
-var dl = false;
+let name = "DAO ANH NGUYEN";
+let accNumber = "0912345678";
+let qr = "00020101021138540010A00000072701240006970432011009323886850208QRIBFTTA53037045802VN6304A349";
+let standee = "standee1.png";
+let dl = false;
+let index = 0;
+let file_name;
 
 const urlParams = new URLSearchParams(window.location.search);
 const myParamName = urlParams.get('name');
@@ -26,6 +30,7 @@ const myParamAccNumber = urlParams.get('acc');
 const myParamQr = urlParams.get('qr');
 const myParamStandee = urlParams.get('standee');
 const myParamStandeeDl = urlParams.get('dl');
+const myParamIndex = urlParams.get('idx');
 
 if(myParamName)
 	name = myParamName;
@@ -42,7 +47,12 @@ if(myParamStandee)
 if(myParamStandeeDl)
 	dl = myParamStandeeDl == "1";
 
-var linkqr = "https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=300x300&choe=UTF-8&chld=L|0";
+if(myParamIndex)
+	index = myParamIndex;
+	
+file_name = ((index == 0) ? '' : index) + name.replaceAll(" ","_") + "_qr_standee.png";
+
+let linkqr = "https://chart.googleapis.com/chart?cht=qr&chl=" + qr + "&chs=300x300&choe=UTF-8&chld=L|0";
 
 var c=document.getElementById("myCanvas");
 
@@ -107,32 +117,14 @@ async function loadImage(url) {
   return new Promise(r => { let i = new Image(); i.onload = (() => r(i)); i.src = url; });
 }
 
-function download2(){
-    document.getElementById("downloader").download = name.replaceAll(" ","_"); + "_qr_standee.png";
-    document.getElementById("downloader").href = document.getElementById("myCanvas").toDataURL("image/png").replace(/^data:image\/[^;]/, 'data:application/octet-stream');
-	
-}
-
-function download1(){
-	console.log('download start');
-	var downloader = document.getElementById("downloader");
-	downloader.download = name.replaceAll(" ","_") + "_qr_standee.png";
-	
-	var image = document.getElementById("myCanvas").toDataURL("image/png")
-				.replace("image/png", "image/octet-stream");
-				
-	downloader.setAttribute("href", image);
-	
-	console.log('download end');
-}
 
 
 function download(){
 	console.log('download start');
-	var downloader = document.getElementById("download");
-	downloader.download = name.replaceAll(" ","_") + "_qr_standee.png";
+	let downloader = document.getElementById("download");
+	downloader.download = file_name;
 	
-	var image = document.getElementById("myCanvas").toDataURL("image/png")
+	let image = document.getElementById("myCanvas").toDataURL("image/png")
 				.replace("image/png", "image/octet-stream");
 				
 	downloader.setAttribute("href", image);
