--- a/firebase.html
+++ b/firebase.html
@@ -13,36 +13,24 @@
 	
 	<script>
 	
+	// Your web app's Firebase configuration
+	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 	const firebaseConfig = {
-		apiKey: "AIzaSyDFvnQjtUebuae1166-PJ3l4-rQd9kIaQA",
-		authDomain: "nguyenda1.firebaseapp.com",
-		databaseURL: "https://nguyenda1-default-rtdb.asia-southeast1.firebasedatabase.app",
-		projectId: "nguyenda1",
-		storageBucket: "nguyenda1.appspot.com",
-		messagingSenderId: "174102333017",
-		appId: "1:174102333017:web:5d88b9a111f8fa33525348",
-		measurementId: "G-WTHMNMKGS3"
-	  };
+	  apiKey: "AIzaSyBPF4njx8hXtGLaPcWaeL44HbdLIFNj2CI",
+	  authDomain: "vpbank-new-uat.firebaseapp.com",
+	  databaseURL: "https://vpbank-new-uat.firebaseio.com",
+	  projectId: "vpbank-new-uat",
+	  storageBucket: "vpbank-new-uat.appspot.com",
+	  messagingSenderId: "30124388332",
+	  appId: "1:30124388332:web:a36a82e7895865f7a7dac9",
+	  measurementId: "G-LGGT7JYZZE"
+	};
 	  
 	  
 	  const app = firebase.initializeApp(firebaseConfig);
 	  
 	</script>
 	
-	<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  
-
-  // Initialize Firebase
-
-</script>
 <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 </head>
