--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>nguyenda.com</title>
+	<meta name="google-adsense-account" content="ca-pub-1760256518914982">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1760256518914982"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <h1>
