--- a/logo.html
+++ b/logo.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <style>
+
+html {
+	font-family: Georgia, Times, "Times New Roman", serif; 
+}
+
 #logo{
     font-size: 30px;
     font-weight: bold;
@@ -11,12 +16,23 @@
     width: auto;
     display: inline-block;
     border-radius: 4px;
+	font-style: normal; 
+	font-variant: normal; 
+	font-weight: 700; 
 }
 </style>
 </head>
 <body>
 
 <div id="logo">cloud.com</div>
+
+
+<h1>The font Property</h1>
+
+<p class="a">This is a paragraph. The font size is set to 15 pixels, and the font family is Arial.</p>
+
+<p class="b">This is a paragraph. The font is set to italic and bold, with small-caps (all lowercase letters are converted to uppercase). The font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
+
 
 </body>
 </html>
