--- a/logo.html
+++ b/logo.html
@@ -24,8 +24,15 @@ html {
 </head>
 <body>
 
-<div id="logo">cloud.com</div>
+<div id="logo">nguyenda.com</div>
 
+<p></p>
+
+<div id="logo">nda</div>
+
+<p></p>
+
+<div id="logo">NDA</div>
 
 <h1>The font Property</h1>
 
