--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="stylesheet" href="tet.css"><style>
+<link rel="stylesheet" href="tet/tet.css"><style>
 /* @font-face {font-family: 'calligraphy'; src:url('./__/calli.ttf');} */
 
 body{font-family: 'Nunito', sans-serif;background:#FFFCF2;}
@@ -170,7 +170,7 @@ figcaption{text-align:center;font-style:italic;margin-top:.6em;}
 		</main>
 
 <div class="scrim fly-close"></div>
-<script src="tet_script.js"></script>
+<script src="tet/tet_script.js"></script>
 <script>
 
 $('a[target!="_blank"]').each(function (e) {
