--- a/logo.html
+++ b/logo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
 <style>
 
 html {
@@ -8,7 +9,8 @@ html {
 }
 
 #logo{
-    font-size: 30px;
+    font-family: 'Broadway', sans-serif;
+    font-size: 64px;
     font-weight: bold;
     background-color: black;
     color: white;
