--- a/404.html
+++ b/404.html
@@ -1,21 +1,21 @@
 <html lang="en"><head>
-  <meta charset="UTF-8">
-  
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   
 
-  <title>CodePen - 404 page</title>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
-  
+	<title>NDA - 404 page</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
 /*======================
     404 page
 =======================*/
 
 
-.page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
+.page_404{ 
+	padding:40px 0; 
+	background:#fff; 
+	font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
 }
 
 .page_404  img{ width:100%;}
@@ -72,7 +72,7 @@
 		
 		<p>the page you are looking for not avaible!</p>
 		
-		<a href="" class="link_404">Go to Home</a>
+		<a href="/" class="link_404">Go to Home</a>
 	</div>
 		</div>
 		</div>
