--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "This is nguyenda.com website."
+description: "nguyenda.com ."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -10,8 +10,22 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="en post-container">
 
 
-    <p>Hi, I am <strong>nguyenda</strong>
+    <p><strong>nguyenda.com</strong>là trang blog chia sẻ về kiến thức, kinh nghiệm về phát triển phần mềm</p>
 
-    <h5>Talks</h5>
-
+    <p><strong>Bao gồm các nội dung</strong></p>
+    <ul>
+        <li>Quy trình phát triển phần mềm</li>
+        <li>Xây dựng phần mềm
+            <ul>
+                <li>Thiết kế tổng thể & chi tiết phần mềm</li>
+                <li>Xây dựng phần mềm</li>
+            </ul>
+        </li>
+        <li>Vận hành phần mềm</li>
+        <li>Công cụ sử dụng trong quá trình xây dựng phần mềm</li>
+        <li>Một số tiện ích, nền tảng hay dùng</li>
+        <li>Tip tối ưu hệ thống/phần mềm</li>
+        <li>Xu hướng phát triển phần mềm</li>
+        <li>...</li>
+    </ul>
 </div>
