--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "nguyenda.com ."
+description: "https://www.nguyenda.com"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -28,4 +28,6 @@ header-img: "img/post-bg-rwd.jpg"
         <li>Xu hướng phát triển phần mềm</li>
         <li>...</li>
     </ul>
+
+    <p>Theme by Hux Blog</p>
 </div>
