--- a/about.html
+++ b/about.html
@@ -5,14 +5,12 @@ description: "https://www.nguyenda.com"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
-
-<!-- English Version -->
 <div class="en post-container">
 
 
-    <p><strong>nguyenda.com</strong>là trang blog chia sẻ về kiến thức, kinh nghiệm về phát triển phần mềm</p>
+    <p><strong>nguyenda.com</strong> là trang blog chia sẻ về kiến thức, kinh nghiệm về phát triển phần mềm</p>
 
-    <p><strong>Bao gồm các nội dung</strong></p>
+    <p><strong>Nội dung</strong></p>
     <ul>
         <li>Quy trình phát triển phần mềm</li>
         <li>Xây dựng phần mềm
