--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "https://www.nguyenda.com"
-header-img: "img/post-bg-rwd.jpg"
+header-img: img/bg/blog02.jpg
 ---
 
 <div class="en post-container">
