--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 layout: page
 title: "About"
 description: "https://www.nguyenda.com"
-header-img: img/bg/blog02.jpg
+header-img: img/bg/blog01.jpg
+header-mask: 0.6
 ---
 
 <div class="en post-container">
